BRANCH COMMIT TEST

--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,17 @@
               <h4>SHIP STATS:(SIZE)</h4>
               <div class="container">
                 <p>SHIP STATS CREW FUEL FOOD HERE<</p>
+                <p>Test for branch commits</p>
                 </div>
               </div>
               <div class="card" id="statCard">
                 <p>ALL STATISTICS</p>
+                CREW: 5
+                <br>
+                Fuel:
+                <progress id="health" value="100" max="100"></progress>
+                Food:
+                <progress id="health" value="100" max="100"></progress>
               </div>
             </div>
           </div>
@@ -59,26 +66,46 @@
                   <div class="col-md-2">
                     <div class="card" id="crew1">
                       <p>CREW 1</P>
+                        Health:
+                        <progress id="health" value="100" max="100"></progress>
+                        Hunger:
+                        <progress id="health" value="100" max="100"></progress>
                     </div>
                   </div>
                   <div class="col-md-2">
                     <div class="card" id="crew2">
                       <p>CREW 2</P>
+                        Health:
+                        <progress id="health" value="100" max="100"></progress>
+                        Hunger:
+                        <progress id="health" value="100" max="100"></progress>
                     </div>
                   </div>
                   <div class="col-md-2">
                     <div class="card" id="crew3">
                       <p>CREW 3</P>
+                        Health:
+                        <progress id="health" value="100" max="100"></progress>
+                        Hunger:
+                        <progress id="health" value="100" max="100"></progress>
                     </div>
                   </div>
                   <div class="col-md-2">
                     <div class="card" id="crew4">
                       <p>CREW 4</P>
+                        Health:
+                        <progress id="health" value="100" max="100"></progress>
+                        Hunger:
+                        <progress id="health" value="100" max="100"></progress>
                     </div>
                   </div>
                   <div class="col-md-2">
                     <div class="card" id="crew5">
                       <p>CREW 5</P>
+                        Health:
+                        <progress id="health" value="100" max="100"></progress>
+                        Hunger:
+                        <progress id="health" value="100" max="100"></progress>
                     </div>
                   </div>
                 </div>
