Changed Hunger bar color for contrast, and updated Id for progress bar elements

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
                 CREW: 5
                 <br>
                 Fuel:
-                <progress id="health" value="100" max="100"></progress>
+                <progress id="fuel" value="100" max="100"></progress>
                 Food:
-                <progress id="health" value="100" max="100"></progress>
+                <progress id="food" value="100" max="100"></progress>
                 <br>
               </div>
             </div>
@@ -83,7 +83,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -93,7 +93,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -103,7 +103,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -113,7 +113,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -123,7 +123,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -177,9 +177,9 @@
                 CREW: 10
                 <br>
                 Fuel:
-                <progress id="health" value="100" max="100"></progress>
+                <progress id="fuel" value="100" max="100"></progress>
                 Food:
-                <progress id="health" value="100" max="100"></progress>
+                <progress id="food" value="100" max="100"></progress>
                 <br>
               </div>
             </div>
@@ -202,7 +202,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -212,7 +212,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -222,7 +222,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -232,7 +232,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -242,7 +242,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -257,7 +257,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -267,7 +267,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -277,7 +277,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -287,7 +287,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
@@ -297,7 +297,7 @@
                         Health:
                         <progress id="health" value="100" max="100"></progress>
                         Hunger:
-                        <progress id="health" value="100" max="100"></progress>
+                        <progress id="hunger" value="100" max="100"></progress>
                     </div>
                   </div>
                   <br>
