Implemented Uriels laptop changes (button style edits, Id changes, and content changes

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <br>
   <br>
   <div class="jumbotron" id="home">
-    <h1>STELLAR TRAIL</h1>
+    <h1 id="title"><b>S T E L L A R  &nbsp  T R A I L</b></h1>
     <br>
-    <h3>A race to the end.</h3>
+    <h3>A &nbsp r a c e &nbsp t o &nbsp t h e &nbsp e n d</h3>
     <br>
     <button type="button" class="btn" id="start">START!</button>
   </div>
@@ -58,9 +58,9 @@
                 CREW: 5
                 <br>
                 Fuel:
-                <progress id="fuel" value="100" max="100"></progress>
+                <center><progress id="fuel" value="100" max="100"></progress></center>
                 Food:
-                <progress id="food" value="100" max="100"></progress>
+                <center><progress id="food" value="100" max="100"></progress></center>
                 <br>
               </div>
             </div>
@@ -69,7 +69,7 @@
             <div class="col-md-12">
               <div class="card" id="actionBar">
                 <div class="row">
-                  <div class="col-md-1">
+                  <div class="col-md-2">
                     <button type="click" id="speedIncrease">FAST</button>
                   </div>
                   <br>
@@ -177,9 +177,9 @@
                 CREW: 10
                 <br>
                 Fuel:
-                <progress id="fuel" value="100" max="100"></progress>
+                <center><progress id="fuel" value="100" max="100"></progress></center>
                 Food:
-                <progress id="food" value="100" max="100"></progress>
+                <center><progress id="food" value="100" max="100"></progress></center>
                 <br>
               </div>
             </div>
@@ -189,11 +189,11 @@
               <div class="card" id="actionBar">
                 <div class="row">
                   <div class="col-md-1">
-                    <button type="click" id="speedIncrease">FAST</button>
+                    <button type="click" id="speedIncrease2">FAST</button>
                   </div>
                   <br>
                   <div class="col-md-1">
-                    <button type="click" id="speedDecrease">SLOW</button>
+                    <button type="click" id="speedDecrease1">SLOW</button>
                   </div>
                   <br>
                   <div class="col-md-2">
