--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="col-md-12">
         <div class="card" id="gameUi">
           <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-9" id="left">
             <div class="card" id="gameWindow">
               <br>
               <h4>STELLAR TRAIL</h4>
@@ -40,7 +40,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" id="right">
             <div class="card" id="shipType">
               <br>
               <h4>SHIP SIZE:(SMALL)</h4>
@@ -70,11 +70,8 @@
               <div class="card" id="actionBar">
                 <div class="row">
                   <div class="col-md-2">
-                    <button type="click" id="speedIncrease">FAST</button>
-                  </div>
-                  <br>
-                  <div class="col-md-1">
-                    <button type="click" id="speedDecrease">SLOW</button>
+                    <button type="click" id="speedIncrease">Increase Travel Speed</button>
+                    <button type="click" id="speedDecrease">Decrease Travel Speed</button>
                   </div>
                   <br>
                   <div class="col-md-2">
@@ -145,7 +142,7 @@
     <div class="col-md-12">
         <div class="card" id="gameUi">
           <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-9" id="left">
             <div class="card" id="gameWindow">
               <br>
               <h4>STELLAR TRAIL</h4>
@@ -159,154 +156,151 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card" id="shipType">
+          <div class="col-md-3" id="right">
+          <div class="card" id="shipType">
+            <br>
+            <h4>SHIP SIZE:(LARGE)</h4>
+            <br>
+            <div class="container">
               <br>
-              <h4>SHIP SIZE:(LARGE)</h4>
+              <p>SHIP STATS CREW FUEL FOOD HERE<</p>
+              <p>Test for branch commits</p>
               <br>
-              <div class="container">
-                <br>
-                <p>SHIP STATS CREW FUEL FOOD HERE<</p>
-                <p>Test for branch commits</p>
-                <br>
-                </div>
-              </div>
-              <div class="card" id="statCard">
-                <br>
-                <p>ALL STATISTICS</p>
-                CREW: 10
-                <br>
-                Fuel:
-                <center><progress id="fuel" value="100" max="100"></progress></center>
-                Food:
-                <center><progress id="food" value="100" max="100"></progress></center>
-                <br>
               </div>
             </div>
+            <div class="card" id="statCard">
+              <br>
+              <p>ALL STATISTICS</p>
+              CREW: 10
+              <br>
+              Fuel:
+              <center><progress id="fuel" value="100" max="100"></progress></center>
+              Food:
+              <center><progress id="food" value="100" max="100"></progress></center>
+              <br>
+            </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card" id="actionBar">
-                <div class="row">
-                  <div class="col-md-1">
-                    <button type="click" id="speedIncrease2">FAST</button>
-                  </div>
-                  <br>
-                  <div class="col-md-1">
-                    <button type="click" id="speedDecrease1">SLOW</button>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew1">
-                      <p>CREW 1</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew2">
-                      <p>CREW 2</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew3">
-                      <p>CREW 3</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew4">
-                      <p>CREW 4</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew5">
-                      <p>CREW 5</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card" id="actionBar">
+              <div class="row">
+                <div class="col-md-2">
+                  <button type="click" id="speedIncrease2">Increase Travel Speed</button>
+                  <button type="click" id="speedDecrease2">Decrease Travel Speed</button>
                 </div>
-                <div class="row">
-                  <div class="col-md-2">
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew1">
+                    <p>CREW 1</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
                   </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew6">
-                      <p>CREW 6</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew7">
-                      <p>CREW 7</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew8">
-                      <p>CREW 8</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew9">
-                      <p>CREW 9</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="col-md-2">
-                    <div class="card" id="crew10">
-                      <p>CREW 10</P>
-                        Health:
-                        <progress id="health" value="100" max="100"></progress>
-                        Hunger:
-                        <progress id="hunger" value="100" max="100"></progress>
-                    </div>
-                  </div>
-                  <br>
                 </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew2">
+                    <p>CREW 2</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew3">
+                    <p>CREW 3</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew4">
+                    <p>CREW 4</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew5">
+                    <p>CREW 5</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+              </div>
+              <div class="row">
+                <div class="col-md-2">
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew6">
+                    <p>CREW 6</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew7">
+                    <p>CREW 7</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew8">
+                    <p>CREW 8</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew9">
+                    <p>CREW 9</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                  <div class="card" id="crew10">
+                    <p>CREW 10</P>
+                      Health:
+                      <progress id="health" value="100" max="100"></progress>
+                      Hunger:
+                      <progress id="hunger" value="100" max="100"></progress>
+                  </div>
+                </div>
+                <br>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     <br>
     <br>
     <button type="button" class="btn" id="goBack2">Go Back</button>
