Add distance travel bar

--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,14 @@
               <br>
               <div class="container">
                 <br>
-                <p>INVENTORY :</p>
+                <p>CARGO HOLD :</p>
                 <p id="Money">MONEY :</p>
                 <p id="shipParts">REPAIR PARTS :</p>
                 <p id="shipOre">ORE :</p>
                 <p id="shipWeapons">WEAPONS :</p>
                 <br>
-                <p id="travelDistance">DISTANCE TRAVELED : 0km</p>
+                <p id="travelDistance">DISTANCE TRAVELED :</p>
+                <progress id="distanceTraveled" value="0" max="100"></progress>
                 <br>
                 </div>
               </div>
@@ -80,7 +81,7 @@
               <div class="card" id="actionBar">
                 <div class="row">
                   <div class="col-md-2">
-                    <button type="click" id="speedIncrease">Explore Planet</button>
+                    <button type="click" id="speedIncrease">Explore </button>
                     <button type="click" id="speedDecrease">Keep Going</button>
                   </div>
                   <br>
@@ -173,13 +174,14 @@
             <br>
             <div class="container">
               <br>
-              <p>INVENTORY :</p>
+              <p>CARGO HOLD :</p>
               <p id="Money">MONEY :</p>
               <p id="shipParts">REPAIR PARTS :</p>
               <p id="shipOre">ORE :</p>
               <p id="shipWeapons">WEAPONS :</p>
               <br>
-              <p id="travelDistance">DISTANCE TRAVELED : 0km</p>
+              <p id="travelDistance">DISTANCE TRAVELED : </p>
+              <progress id="distanceTraveled" value="0" max="100"></progress>
               <br>
               </div>
             </div>
