Add money credit styling and planning for in game shop page

--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,14 @@
               <div class="container">
                 <br>
                 <p>CARGO HOLD :</p>
-                <p id="Money">MONEY :</p>
+                <p id="money">MONEY :<font color="Yellow"> $0 CREDITS</font></p>
                 <p id="shipParts">REPAIR PARTS :</p>
                 <p id="shipOre">ORE :</p>
                 <p id="shipWeapons">WEAPONS :</p>
                 <br>
                 <p id="travelDistance">DISTANCE TRAVELED :</p>
                 <progress id="distanceTraveled" value="0" max="100"></progress>
+                <p id ="elapsedTime">ELAPSED TIME : </p>
                 <br>
                 </div>
               </div>
@@ -175,13 +176,14 @@
             <div class="container">
               <br>
               <p>CARGO HOLD :</p>
-              <p id="Money">MONEY :</p>
+              <p id="money">MONEY :<font color="Yellow"> $0 CREDITS</font></p>
               <p id="shipParts">REPAIR PARTS :</p>
               <p id="shipOre">ORE :</p>
               <p id="shipWeapons">WEAPONS :</p>
               <br>
               <p id="travelDistance">DISTANCE TRAVELED : </p>
               <progress id="distanceTraveled" value="0" max="100"></progress>
+              <p id ="elapsedTime">ELAPSED TIME : </p>
               <br>
               </div>
             </div>
