Add time tracker in front end

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 <br>
                 <p id="travelDistance">DISTANCE TRAVELED :</p>
                 <progress id="distanceTraveled" value="0" max="100"></progress>
-                <p id ="elapsedTime">ELAPSED TIME : </p>
+                <p id ="elapsedTime">ELAPSED TIME : <p id=months>Months</p><p id="years"> Years</p></p>
                 <br>
                 </div>
               </div>
@@ -183,7 +183,7 @@
               <br>
               <p id="travelDistance">DISTANCE TRAVELED : </p>
               <progress id="distanceTraveled" value="0" max="100"></progress>
-              <p id ="elapsedTime">ELAPSED TIME : </p>
+              <p id ="elapsedTime">ELAPSED TIME : <p id=months>Months</p><p id="years"> Years</p></p>
               <br>
               </div>
             </div>
