Finish layout of shop and content, need to add styling

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,36 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="card" class="itemBox">
+                    <img src="https://img.pngio.com/-fuel-png-300_300.png" alt="Shop Keeper" class="shopItemImages">
+                    <p>Fuel, its free! for just 50 credits!</p>
+                    <button type="button" class="btn" id="purchase">Buy</button>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card" class="itemBox">
+                    <img src="https://png.pngtree.com/png-clipart/20190516/original/pngtree-a-set-of-motorcycle-parts-png-image_4173409.jpg" alt="Shop Keeper" class="shopItemImages">
+                    <p>Ship damaged? Here buy this springy thing </p>
+                    <button type="button" class="btn" id="purchase">Buy</button>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card" class="itemBox">
+                    <img src="https://gamepedia.cursecdn.com/arksurvivalevolved_gamepedia/a/a2/Tek_Replicator.png" alt="Shop Keeper" class="shopItemImages">
+                    <p>Shield generators, will block almost anyhting </p>
+                    <button type="button" class="btn" id="purchase">Buy</button>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card" class="itemBox">
+                    <img src="https://pngimg.com/uploads/teddy_bear/teddy_bear_PNG94.png" alt="Shop Keeper" class="shopItemImages">
+                    <p>William Jenkins, he'll keep you comfy</p>
+                    <button type="button" class="btn" id="purchase">Buy</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
